--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section id="home">
             <h1>Welcome to My Portfolio</h1>
-            <p>Hi, I'm [Your Name]. This is my portfolio.</p>
+            <p>Hi, I'm Akbar Setiyawan. This is my portfolio.</p>
         </section>
 
         <section id="projects">
