--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <section id="home">
             <h1>Welcome to My Portfolio</h1>
             <p>Hi, I'm Akbar Setiyawan. This is my portfolio.</p>
+            <p>Visit me on my <a href="https://github.com/arezyhs">GitHub</a></p>
         </section>
 
         <section id="projects">
@@ -38,7 +39,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Feel free to reach out to me at [your email].</p>
+            <p>Feel free to reach out to me at <a href="mailto:offizier.rezy@gmail.com">offizier.rezy@gmail.com</a></p>
         </section>
     </main>
 
